# The-One-True-Makefile

./: .gitignore  COPYING  Makefile.in  README.md  configure  configure.ac  project.m4
example/: config_macbook.sh
foo/: module.mk
foo/share/one_true_makefile/foo/: hello.xml
foo/src/: foo.cpp  hello.cpp  hello.hpp
include/: config.h  config.h.in
test_foo/: module.mk
test_foo/src/: test_foo_word0.cpp  test_foo_word1.cpp
test_tinyxml/: module.mk
test_tinyxml/src/: xmltest.cpp
test_tinyxml2/: module.mk
test_tinyxml2/src/: xmltest.cpp
tinyxml/: module.mk
tinyxml/include/one_true_makefile/tinyxml/: tinyxml.h
tinyxml/src/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
tinyxml2/: module.mk
tinyxml2/src/: tinyxml2.cpp
